[gd_scene load_steps=5 format=3 uid="uid://b5n8k2l4p7q9m"]

[ext_resource type="PackedScene" uid="uid://d3uvj1q3nvf6x" path="res://scenes/core/Player.tscn" id="1_r6s8t"]
[ext_resource type="Script" path="res://scenes/assembly_room/Signing.gd" id="2_m3k7n"]
[ext_resource type="PackedScene" path="res://scripts/systems/Dialogue.tscn" id="3_h9j2k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_room"]
size = Vector3(16, 4, 12)

[node name="Signing" type="Node3D"]
script = ExtResource("2_m3k7n")

[node name="Player" parent="." instance=ExtResource("1_r6s8t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 5)

[node name="AssemblyRoom" type="StaticBody3D" parent="."]

[node name="RoomMesh" type="MeshInstance3D" parent="AssemblyRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="RoomCollision" type="CollisionShape3D" parent="AssemblyRoom"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_room")

[node name="ClerksTable" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -4)

[node name="ClerksTableMesh" type="MeshInstance3D" parent="ClerksTable"]

[node name="ClerksTableInteractable" type="Area3D" parent="ClerksTable"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ClerksTable/ClerksTableInteractable"]

[node name="GreenBaizeTable1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.75, -1)

[node name="BaizeTableMesh" type="MeshInstance3D" parent="GreenBaizeTable1"]

[node name="TableInteractable" type="Area3D" parent="GreenBaizeTable1"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GreenBaizeTable1/TableInteractable"]

[node name="GreenBaizeTable2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.75, -1)

[node name="BaizeTableMesh" type="MeshInstance3D" parent="GreenBaizeTable2"]

[node name="TableInteractable" type="Area3D" parent="GreenBaizeTable2"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GreenBaizeTable2/TableInteractable"]

[node name="GreenBaizeTable3" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 1)

[node name="BaizeTableMesh" type="MeshInstance3D" parent="GreenBaizeTable3"]

[node name="TableInteractable" type="Area3D" parent="GreenBaizeTable3"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GreenBaizeTable3/TableInteractable"]

[node name="Chandelier" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0)

[node name="ChandelierMesh" type="MeshInstance3D" parent="Chandelier"]

[node name="FoldingScreenNE" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, -4)

[node name="ScreenMesh" type="MeshInstance3D" parent="FoldingScreenNE"]

[node name="FoldingScreenNW" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 1.5, -4)

[node name="ScreenMesh" type="MeshInstance3D" parent="FoldingScreenNW"]

[node name="WindowEast" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 2, 0)

[node name="WindowMesh" type="MeshInstance3D" parent="WindowEast"]

[node name="WindowWest" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 2, 0)

[node name="WindowMesh" type="MeshInstance3D" parent="WindowWest"]

[node name="SeatingPlan" type="Node3D" parent="."]

[node name="Chair1" type="StaticBody3D" parent="SeatingPlan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.4, -1)

[node name="ChairMesh" type="MeshInstance3D" parent="SeatingPlan/Chair1"]

[node name="Chair2" type="StaticBody3D" parent="SeatingPlan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.4, -1)

[node name="ChairMesh" type="MeshInstance3D" parent="SeatingPlan/Chair2"]

[node name="Chair3" type="StaticBody3D" parent="SeatingPlan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.4, -1)

[node name="ChairMesh" type="MeshInstance3D" parent="SeatingPlan/Chair3"]

[node name="Chair4" type="StaticBody3D" parent="SeatingPlan"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0.4, -1)

[node name="ChairMesh" type="MeshInstance3D" parent="SeatingPlan/Chair4"]

[node name="InformationLectern" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0.9, 3)

[node name="LecternMesh" type="MeshInstance3D" parent="InformationLectern"]

[node name="LecternInteractable" type="Area3D" parent="InformationLectern"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="InformationLectern/LecternInteractable"]

[node name="SigningMarker" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.8, -4)

[node name="MarkerInteractable" type="Area3D" parent="SigningMarker"]
script = ExtResource("Interactable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SigningMarker/MarkerInteractable"]

[node name="DialogueSystem" parent="." instance=ExtResource("3_h9j2k")]

[node name="SigningSequence" type="Node" parent="."]

[node name="SequenceTimer" type="Timer" parent="SigningSequence"]
wait_time = 2.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="SigningProgress" type="Panel" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -20.0

[node name="ProgressContent" type="VBoxContainer" parent="UI/SigningProgress"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ProgressTitle" type="Label" parent="UI/SigningProgress/ProgressContent"]
layout_mode = 2
text = "SIGNING IN PROGRESS"
horizontal_alignment = 1

[node name="ProgressText" type="Label" parent="UI/SigningProgress/ProgressContent"]
layout_mode = 2
text = "Preparing ceremony..."
horizontal_alignment = 1

[node name="EvidenceNote" type="Panel" parent="UI"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = -20.0

[node name="EvidenceContent" type="VBoxContainer" parent="UI/EvidenceNote"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="EvidenceTitle" type="Label" parent="UI/EvidenceNote/EvidenceContent"]
layout_mode = 2
text = "HISTORICAL NOTE"
horizontal_alignment = 1

[node name="EvidenceText" type="RichTextLabel" parent="UI/EvidenceNote/EvidenceContent"]
layout_mode = 2
size_flags_vertical = 3
text = "Best-evidence reconstruction. Exact seating plan unknown."
fit_content = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 6, 0)
light_energy = 0.8
shadow_enabled = true